--- a/mobile-ui/src/main/AndroidManifest.xml
+++ b/mobile-ui/src/main/AndroidManifest.xml
@@ -6,10 +6,9 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".UserApplication"
+        android:name=".CleanGitApplication"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
-
         <activity android:name=".browse.BrowseActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,7 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity
+            android:name=".detail.UserDetailActivity"
+            android:label="@string/title_activity_user_detail"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
