--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -186,7 +186,8 @@ ext {
             roomRuntime:        "android.arch.persistence.room:runtime:${roomVersion}",
             roomCompiler:       "android.arch.persistence.room:compiler:${roomVersion}",
             roomRxJava:         "android.arch.persistence.room:rxjava2:${roomVersion}",
-    ]
+            cardView:           "com.android.support:cardview-v7:${supportLibraryVersion}"
+]
 
     mobileUiTestDependencies = [
             junit:              "junit:junit:${jUnitVersion}",
