--- a/mobile-ui/src/main/AndroidManifest.xml
+++ b/mobile-ui/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <application
         android:name=".CleanGitApplication"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme.NoActionBar">
         <activity android:name=".browse.BrowseActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
